--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -45,11 +45,13 @@
             android:onClick="buttonCoursesOnClick" />
 
         <Button
-            android:layout_width="fill_parent"
+            android:id="@+id/buttonGraph"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/registrations"
-            android:enabled="false"
-            android:id="@+id/buttonRegistrations" />
+            android:text="@string/graph"
+            android:onClick="buttonGraphOnClick"/>
+
+
     </LinearLayout>
 
 </RelativeLayout>
