--- a/app/src/main/res/layout/activity_start_workout.xml
+++ b/app/src/main/res/layout/activity_start_workout.xml
@@ -23,6 +23,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.071" />
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/exerciseList"
+        android:layout_weight="1"
+        android:layout_gravity="top"
+        android:choiceMode="singleChoice" />
+
     <Button
         android:id="@+id/start_button"
         android:layout_width="122dp"
