--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,12 +30,12 @@
             android:text="@string/startWorkout" />
 
         <Button
-            android:id="@+id/buttonUploadProgress"
+            android:id="@+id/buttonProgress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            android:onClick="buttonUploadProgressOnClick"
-            android:text="Upload Progress" />
+            android:onClick="buttonProgressOnClick"
+            android:text="Progress" />
 
         <Button
             android:id="@+id/buttonMyRoutines"
