--- a/app/src/main/res/layout/activity_add_routine.xml
+++ b/app/src/main/res/layout/activity_add_routine.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="comp3350.srsys.presentation.AddRoutineActivity">
+    tools:context="comp3350.superset.presentation.AddRoutineActivity">
 
     <ListView
         android:layout_width="match_parent"
